<resources>
    <string name="app_name">Foodplan Lüneburg</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Foodplan Lüneburg</string>
    <string name="nav_header_subtitle">WebMo Project</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_foodplan">Foodplan</string>
    <string name="menu_fooddetail">Fooddetail</string>
    <string name="menu_foods">Foods</string>

    <string name="menu_login">Login</string>
    <string name="menu_settings">Settings</string>

    <string name="login_name">Name</string>
    <string name="login_password">Password</string>
    <string name="login_successfull">Successfull</string>
    <string name="logout_successfull">Logout Successfull</string>
    <string name="login_unsuccessfull">Unsuccessfull</string>
    <string name="logout">Logout</string>

    <string name="endtext">This app is part of a Project. Made by Henrik, Max and Jonas.</string>
    <string name="settings_selectlanguage">Select a language:</string>
    <string-array name="language">
        <item>English</item>
        <item>Deutsch</item>
    </string-array>


    <!--Fragment slideshow/Foods-->
    <string name="button_add">ADD</string>

    <string name="editText_nameOfFood">name of Food</string>

    <!--Fragment foodDetail-->
    <string name="txt_food_id">FOODID</string>
    <string name="txt_food_name">FOODNAME</string>
    <string name="txt_food_price">FOODPRICE</string>
    <string name="txt_food_type">FOODTYPE</string>


    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_back">Back</string>
    <string name="button_delete_foodplan">Delete from foodplan</string>
    <string name="button_back_foodplan">Back to foodplan</string>
    <string name="button_addToFoodplan">ADD TO FOODPLAN</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_home">Home</string>

    <!--Activity Main/FoodList-->
    <string name="txt_monday">Monday</string>
    <string name="txt_tuesday">Tuesday</string>
    <string name="txt_wednesday">Wednesday</string>
    <string name="txt_thursday">Thursday</string>
    <string name="txt_friday">Friday</string>
    <string name="addedToFoodplan">Added to foodplan</string>
    <string name="current_week">current Week</string>
    <string name="next_week">next Week</string>
    <string name="week">"Week: "</string>

    <!--Activity FoodSearch-->
    <string name="txt_foodSearch">Tap food to search</string>
    <string name="txt_currentWeek">The food is available in this week.</string>
    <string name="txt_nextWeek">The food is available in the next week.</string>
    <string name="txt_secondWeek">The food is available in two weeks.</string>
    <string name="thirdWeek">The food is available in three weeks.</string>
    <string name="txt_fourthWeek">The food is available in four weeks.</string>
    <string name="txt_fithWeek">The food is available in five weeks.</string>
    <string name="txt_sixthWeek">The food is available in six weeks.</string>
    <string name="txt_seventhWeek">The food is available in seven weeks.</string>
    <string name="txt_noWeek">The food isn\'t available in the next seven weeks.</string>

</resources>