<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="bottom"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="30dp"
        android:background="#f1f1f1"
        android:visibility="visible">

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/foodId"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txt_food_id"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foodIdVal"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="245607"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/foodName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txt_food_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foodNameVal"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="Nudeln mit Tomatensauce" />
        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/foodPrice"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txt_food_price"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foodPriceVal"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="2,50 €" />
        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/foodType"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txt_food_type"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foodTypeVal"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="vegan" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:text="@string/button_delete_foodplan" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"

        android:text="@string/button_back_foodplan" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginTop="15sp">

        <Button
            android:id="@+id/nav_foodplanButton"
            android:layout_width="90sp"
            android:layout_height="50sp"
            android:layout_gravity="top"
            android:layout_marginStart="11sp"
            android:layout_marginEnd="10sp"
            android:background="@drawable/my_button_border"
            android:text="@string/menu_foodplan"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/nav_foodsButton"
            android:layout_width="90sp"
            android:layout_height="50sp"
            android:layout_gravity="top"
            android:layout_marginEnd="10sp"
            android:background="@color/colorPrimary"
            android:text="@string/menu_foods"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/nav_loginButton"
            android:layout_width="90sp"
            android:layout_height="50sp"
            android:layout_gravity="top"
            android:layout_marginEnd="10sp"
            android:background="@color/colorPrimary"
            android:text="@string/menu_login"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/nav_searchButton"
            android:layout_width="90sp"
            android:layout_height="50sp"
            android:layout_gravity="top"
            android:layout_marginEnd="10sp"
            android:background="@color/colorPrimary"
            android:src="@drawable/foodsearchicon"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>