<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editPasswordText"
        android:layout_width="265dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNameText"
        app:layout_constraintVertical_bias="0.069" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordText"
        app:layout_constraintVertical_bias="0.101" />

    <EditText
        android:id="@+id/editNameText"
        android:layout_width="265dp"
        android:layout_height="60dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/login_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="98dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button">

        <Button
            android:id="@+id/foodplanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11sp"
            android:layout_marginEnd="11sp"
            android:background="@color/colorPrimary"
            android:text="@string/menu_foodplan"
            android:textColor="@android:color/white"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/foodsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14sp"
            android:background="@color/colorPrimary"
            android:text="@string/menu_foods"
            android:textColor="@android:color/white"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17sp"
            android:background="@color/colorPrimary"
            android:text="@string/menu_login"
            android:textColor="@android:color/white"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="11sp"
            android:background="@color/colorPrimary"
            android:text="@string/menu_settings"
            android:textColor="@android:color/white"
            android:textStyle="bold"></Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>