<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:gravity="bottom">


    <Button
        android:id="@+id/foodplanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_toStartOf="@+id/foodsButton"
        android:background="@color/colorPrimary"
<<<<<<< Updated upstream
        android:text="@string/menu_foodplan"
        android:textColor="@android:color/white"></Button>

    <Button
        android:id="@+id/foodsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_toStartOf="@+id/loginButton"
        android:text="@string/menu_foods"></Button>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_toStartOf="@+id/settingsButton"
        android:text="@string/menu_login"></Button>

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:text="@string/menu_settings"></Button>

</RelativeLayout>
=======
        android:text="@string/txt_friday"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:textAlignment="center"/>

    <GridView
        android:id="@+id/gridFriday"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:numColumns="3">

    </GridView>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_currentweek"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="current Week"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/text_weekno"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/my_button_border"
            android:gravity="center_horizontal|center_vertical"
            android:text="TextView"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/button_nextWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="next Week"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nav_foodplanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@drawable/my_button_border"
            android:text="@string/menu_foodplan"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/nav_foodsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@color/colorPrimary"
            android:text="@string/menu_foods"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/nav_loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@color/colorPrimary"
            android:text="@string/menu_login"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>



>>>>>>> Stashed changes
